Closed Bug 764753 Opened 13 years ago Closed 13 years ago

Screen orientation isn't unlocked when the document is left without explicitly exiting fullscreen

Categories

(Core :: DOM: Core & HTML, defect)

defect
Not set
normal

Tracking

()

VERIFIED FIXED
mozilla15
Tracking Status
firefox13 --- unaffected
firefox14 --- wontfix
firefox15 + verified
firefox16 --- verified

People

(Reporter: martijn.martijn, Assigned: mounir)

References

Details

(Keywords: mobile, testcase)

Attachments

(2 files)

Attached file testcase
See testcase, when tapping on the portrait or landscape button, you have locked Fennec to landscape/portrait mode, which should not be possible.
I guess bug 757791 is related.
(In reply to Martijn Wargers [:mw22] (QA - IRC nick: mw22) from comment #1) > I guess bug 757791 is related. No. I think the issue here is that reload() should unlock the screen but doesn't do that. I will try to have a look when I will find time to solve my link issue on Android.
Blocks: 740190
Blocks: 740188
No longer blocks: 740190
Component: General → DOM
OS: Android → All
Product: Fennec Native → Core
QA Contact: general → general
Hardware: ARM → All
Summary: Can lock screen in portrait/landscape mode in this case using mozRequestFullScreen() → Screen orientation isn't unlocked when the document is left without explicitly exiting fullscreen
Attached patch Patch v1Splinter Review
This should fix it. I have a patch that will make sure that unlock() is a no-op if the screen isn't currently locked (in Android backend).
Assignee: nobody → mounir
Status: NEW → ASSIGNED
Attachment #635238 - Flags: review?(bugs)
Blocks: 766903
Attachment #635238 - Flags: review?(bugs) → review+
Target Milestone: --- → mozilla16
Attachment #635238 - Flags: checkin+
Comment on attachment 635238 [details] [diff] [review] Patch v1 [Approval Request Comment] Bug caused by (feature/regressing bug #): 740188 User impact if declined: when navigating to a page using screen lock, Firefox might be stuck to the same orientation with the only salvation being restarting Firefox Risk to taking this patch (and alternatives if risky): only regressions in screen lock features, unlikely worse than keeping this bug String or UUID changes made by this patch: none
Attachment #635238 - Flags: approval-mozilla-aurora?
Keywords: mobile
Status: ASSIGNED → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
Comment on attachment 635238 [details] [diff] [review] Patch v1 [Triage Comment] Early enough in the cycle that I expect to find regressions prior to release. Approving for Aurora 15.
Attachment #635238 - Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
Target Milestone: mozilla16 → mozilla15
Verified/fixed on: Nightly Fennec 16.0a1 (2012-07-08) Aurora Fennec 15.0a2 (2012-07-08) Using: HTC Desire Z (2.3.3) The issue in the bug is not reproducible and the test case in the bug works correctly.
Status: RESOLVED → VERIFIED
Component: DOM → DOM: Core & HTML
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: