Bug 764753 - Unlock screen orientation when the document is left without explicitly exiting fullscreen. r=smaug