dom/base/nsScreen.cpp
@@ -63,8 +63,15 @@ nsScreen::nsScreen()
 {
 }
 
+void
+nsScreen::Reset()
+{
+  hal::UnlockScreenOrientation();
+}
+
 nsScreen::~nsScreen()
 {
+  Reset();
   hal::UnregisterScreenConfigurationObserver(this);
 }
 
